<resources>
    <string name="app_name">Robot_Deliver</string>
    <string name="delete">删除</string>
    <string name="confirm">确认</string>
    <string name="default_qrcode_tip">送物到房 找小犀\n微信扫一扫 即刻送到房</string>
    <string name="qrcode_tip">送物到房 找%1$s\n微信扫一扫 即刻送到房</string>
    <string name="password_tip">输入密码，使用机器人递送物品到客房</string>
    <string name="input_admin_password">请输入管理员密码</string>
    <string name="pinch_continue_password">输入密码，机器人将执行后续配送任务</string>
    <string name="password_tip_wrong">密码错误，请重新输入</string>
    <string name="lock_screen">锁屏</string>
    <string name="homepage">首页</string>
    <string name="cancel">取消</string>
    <string name="put_package">送至%1$s房间，请放入物品</string>
    <string name="room_number_tip">请输入房间号，点击确定后等待舱门开启</string>
    <string name="room_number_tip_error">您输入的房号有误，请修改</string>
    <string name="ready_open">正在准备打开舱门...</string>
    <string name="ready_close">正在准备关闭舱门...</string>
    <string name="create_order">正在创建订单...</string>
    <string name="sync_order">正在同步订单...</string>
    <string name="order_failed">订单创建失败，请取走物品并关门</string>
    <string name="sync_order_failed">订单同步失败，请取走物品并关门</string>
    <string name="order_failed_tip">订单创建失败，请稍后重试</string>
    <string name="no_box">机器人暂无舱可用，请稍后再试...</string>
    <string name="second_box_open_failed">舱门无法打开，故障已上报，先去执行已有任务吧</string>
    <string name="box_close_failed">舱门无法关闭，请先取出物品，再操作</string>
    <string name="second_box_close_failed">舱门无法关闭，故障已上报，请先取出物品后，点击确定，机器人将开始执行已有任务</string>
    <string name="second_create_order_failed">仓内为空创建订单失败，点击确定将开始执行已有任务</string>
    <string name="send_other_orders">%1$s秒后将配送后续订单</string>
    <string name="low_battery_tip">机器人电量过低，将在%1$s秒后返回充电桩，请尽快操作</string>
    <string name="second_box_open_no_box">机器人暂无可用舱，先去执行已有任务吧</string>
    <string name="open_box_failed">舱门无法打开，故障已上报</string>
    <string name="report_error">故障已上报</string>
    <string name="retry_create_order">物品已取出，稍后可重试下单</string>
    <string name="device_error">出现故障，错误码 %1$s</string>
    <string name="admin_retrieve">开门取物</string>
    <string name="back_homepage">返回首页</string>
    <string name="continue_execute_task">继续执行任务</string>
    <string name="close_failed">舱门无法正常关闭，请先取出物品，再操作</string>
    <string name="retry_order">重新下单</string>
    <string name="distribute">立即配送</string>
    <string name="create_second_order">再下一单</string>
    <string name="ready_send">准备配送...</string>
    <string name="deliver_to_room">正在执行任务</string>
    <string name="deliver_to_home">正在前往充电桩</string>
    <string name="deliver_to_reception">正在前往前台</string>
    <string name="deliver_to_refill">正在前往补舱目的地</string>
    <string name="arrived_room">您的物品已送达</string>
    <string name="open">开门</string>
    <string name="pickup">请您取走物品</string>
    <string name="close">关门</string>
    <string name="picking">取物中</string>
    <string name="pickup_error_tip">您好，暂时无法取出的物品，酒店会尽快为您安排配送，请接着取后面的物品吧</string>
    <string name="breakdown">故障</string>
    <string name="report_breakdown">故障已报告管理员，稍后联系您</string>
    <string name="open_error">舱门无法正常打开，故障已上报管理员，订单将由服务员为您处理，请稍等...</string>
    <string name="take_error">舱门关闭异常，故障已上报管理员</string>
    <string name="refill_box_error">舱门异常，故障已上报管理员</string>
    <string name="box_pinch_error">舱门异常，已上报管理员,待工作人员检查后再执\n行后续任务</string>
    <string name="pickup_finish">本次配送已完成，期待再次为您服务，再见！</string>
    <string name="pickup_error">抱歉，出了点小问题，酒店会尽快为您重新安排！</string>
    <string name="takeout_close_error">舱门关闭异常，故障已上报管理员</string>
    <string name="failed_tip">%1$s单运送失败，请取走物品并关门</string>
    <string name="task_failed_tip">配送失败，请取走物品并关门</string>
    <string name="retrieve">开门取物</string>
    <string name="box_done">完成 </string>
    <string name="box_error">异常 </string>
    <string name="box_close">关门</string>
    <string name="box_open">开门</string>
    <string name="alert_title">提示</string>
    <string name="alert_tip">请先输入正确的管理员密码，再开启舱门取出物品。</string>
    <string name="alert_password">请先输入理员密码，进行故障处理</string>
    <string name="admin_password">请输入理员密码，进行开舱取物</string>
    <string name="retrieve_success">所有客房送物订单已取出</string>
    <string name="retrieve_failed">舱门打开异常，已通知运维</string>
    <string name="execute_task">执行后续任务</string>
    <string name="back_charge">返回充电桩充电</string>
    <string name="alert_confirm">确认</string>
    <string name="breakdown_confirm">确认呼叫管理员报告故障？</string>
    <string name="setting_config">管理信息</string>
    <string name="setting_wifi">WiFi设置</string>
    <string name="setting_cargo">强制开舱</string>
    <string name="takeout_box">外卖舱位</string>
    <string name="setting_cargo_tip">有未关闭舱门，请关舱后再操作。</string>
    <string name="please_wait">请稍等...</string>
    <string name="setting_state">状态</string>
    <string name="device_sn">设备序列号</string>
    <string name="firmware_version">固件版本号</string>
    <string name="cloud_version">云端配置包版本号</string>
    <string name="wifi_mac">Wi-Fi Mac地址</string>
    <string name="app_version">App版本号</string>
    <string name="reboot">重启</string>
    <string name="reboot_robot">重启机器人</string>
    <string name="enable_wlan">开启WLAN</string>
    <string name="connect_wlan">连接的WLAN</string>
    <string name="choose_wlan">请选择附近的WLAN</string>
    <string name="refresh">刷新</string>
    <string name="password">密码</string>
    <string name="signal_level">信号强度</string>
    <string name="signal_great">极佳</string>
    <string name="signal_good">良好</string>
    <string name="signal_normal">一般</string>
    <string name="signal_bad">较差</string>
    <string name="security">安全性</string>
    <string name="proxy">代理</string>
    <string name="proxy_none">无</string>
    <string name="proxy_manual">手动</string>
    <string name="proxy_pac">代理自动配置</string>
    <string name="proxy_pac_address">PAC 网址</string>
    <string name="proxy_host">主机名</string>
    <string name="proxy_port">端口</string>
    <string name="proxy_exclusion">不使用网址</string>
    <string name="wpa_psk">WPA2/PSK</string>
    <string name="wpa_eap">WPA2/EAP</string>
    <string name="wep">WEP</string>
    <string name="ip_set">IP 设置</string>
    <string name="dhcp">DHCP</string>
    <string name="ip_static">静态</string>
    <string name="ip_address">IP 地址</string>
    <string name="ip_route">路由器</string>
    <string name="ip_prefix_len">前缀长度</string>
    <string name="ip_dns1">DNS1</string>
    <string name="ip_dns2">DNS2</string>

    <string name="auto_connect">自动连接</string>
    <string name="wifi_info">状态信息</string>
    <string name="wifi_speed">连接速度</string>
    <string name="ip_addr">IP地址</string>
    <string name="mask">子网掩码</string>
    <string name="route">路由</string>
    <string name="modify_pass">修改密码</string>
    <string name="del_wifi">删除网络</string>
    <string name="back">返回</string>
    <string name="unavailable">不可用</string>
    <string name="saved">已保存</string>
    <string name="connecting">正在连接</string>
    <string name="connected">已连接</string>
    <string name="connect_failed">连接失败，请重试！</string>
    <string name="password_no_change">密码(未更改)</string>
    <string name="delivery_robot">%1$s酒店配送机器人</string>
    <string name="default_delivery_robot">小犀酒店配送机器人</string>

    <!--补舱-->
    <string name="hs_send">送物到房</string>
    <string name="hs_add">酒店用品补舱</string>
    <string name="create_order_failed">创建订单失败,请稍后重试</string>
    <string name="create_order_tip">订单已生成，稍后执行配送</string>
    <string name="refill_box_tip">请选择您需要补货的舱位</string>
    <string name="refill_product_tip">请选择补舱的商品名称</string>
    <string name="refill_count">请确认目前舱内库存数量</string>
    <string name="refill_product_choose_tip">舱门已打开，\n 请进行补舱操作，再选择是否更改补舱商品类型</string>
    <string name="refill_sku_choose">舱门已打开， 请进行补舱操作</string>
    <string name="refill_product_choose_yes">是，更改商品类型</string>
    <string name="refill_product_choose_no">否，无需更改</string>
    <string name="refill_sku_name">商品名称</string>
    <string name="refill_count_input_hint">自定义输入</string>
    <string name="refill_count_close">确认并关舱</string>
    <string name="refill_count_tip">请输入当前舱内的库存数据</string>
    <string name="refill_count_submit">提交</string>
    <string name="refill_continue">继续补舱</string>
    <string name="refill_finish">舱门已关闭，本次补货已完成，请选择后续服务</string>
    <string name="refill_timeout">已超时，本次补舱失败，请重新操作</string>
    <string name="refill_close_box_error">舱门异常，本次补舱失败，请重新操作</string>
    <string name="refill_box_empty">系统校验舱内为空，与输入舱内剩余数量不符,请重新操作</string>
    <string name="refill_box_not_empty">舱内有物，与输入舱内剩余数量不符,请重新操作</string>
    <string name="refill_error_tip">系统异常，故障已上报给管理员</string>
    <string name="refill_lock_failed_tip">抱歉，我有待配送的任务，请稍后再进行补货哟</string>
    <string name="low_battery">当前机器人电量过低，请稍后再操作哦</string>
    <string name="refill_deliver">立即配送</string>
    <string name="refill_home">返回首页</string>
    <string name="refill_cargo">舱位</string>
    <string name="refill_cargo_pos">舱位%1$s</string>
    <string name="refill_cargo_point">··</string>
    <string name="refill_cargo_top">顶</string>
    <string name="refill_cargo_front">正</string>
    <string name="refill_cargo_back">背</string>
    <string name="refill_cargo_1">舱位000</string>
    <string name="refill_cargo_2">舱位001</string>
    <string name="refill_cargo_3">舱位002</string>
    <string name="refill_cargo_4">舱位003</string>
    <string name="refill_cargo_5">舱位004</string>
</resources>