<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/breakdown_bg">

    <RelativeLayout
        android:id="@+id/rl_box_no_box"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="337dp"
            android:text="@string/no_box"
            android:textColor="@color/white"
            android:textSize="48dp" />

        <TextView
            android:id="@+id/tv_box_no_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="475dp"
            android:background="@drawable/selector_distribute_bg"
            android:gravity="center_horizontal"
            android:paddingTop="30dp"
            android:text="@string/back_homepage"
            android:textColor="@color/text_blue"
            android:textSize="35dp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/rl_box_opening"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

        <com.slamtec.robot.deliver.customview.LoadingView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="@dimen/dp_248" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="46dp"
            android:text="@string/ready_open"
            android:textColor="@color/white"
            android:textSize="48dp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_open_box_failed"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="337dp"
            android:text="@string/open_box_failed"
            android:textColor="@color/white"
            android:textSize="48dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="475dp">

            <TextView
                android:id="@+id/tv_box_failed_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/selector_distribute_bg"
                android:gravity="center_horizontal"
                android:paddingTop="30dp"
                android:text="@string/back_homepage"
                android:textColor="@color/text_blue"
                android:textSize="35dp" />

            <TextView
                android:id="@+id/tv_box_failed_retry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/selector_distribute_bg"
                android:gravity="center_horizontal"
                android:paddingTop="30dp"
                android:text="@string/retry_order"
                android:textColor="@color/text_blue"
                android:textSize="35dp" />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_open_second_box_failed"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="337dp"
            android:text="@string/second_box_open_failed"
            android:textColor="@color/white"
            android:textSize="48dp" />

        <TextView
            android:id="@+id/tv_second_box_open_failed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="475dp"
            android:background="@drawable/selector_distribute_bg"
            android:gravity="center_horizontal"
            android:paddingTop="30dp"
            android:text="@string/confirm"
            android:textColor="@color/text_blue"
            android:textSize="35dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_open_second_no_box"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="337dp"
            android:text="@string/second_box_open_no_box"
            android:textColor="@color/white"
            android:textSize="48dp" />

        <TextView
            android:id="@+id/tv_box_open_second_no_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="475dp"
            android:background="@drawable/selector_distribute_bg"
            android:gravity="center_horizontal"
            android:paddingTop="30dp"
            android:text="@string/confirm"
            android:textColor="@color/text_blue"
            android:textSize="35dp" />
    </RelativeLayout>

</RelativeLayout>